--- a/PRAKTYKA/arkEE.09-2022-01-01/karta.html
+++ b/PRAKTYKA/arkEE.09-2022-01-01/karta.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <div class="baner">
-        <h2></h2>
+        <h2>Zgłoszenie na kartę wędkarską</h2>
     </div>
     <div class="glowny">
+        <h4>Formularz - karta wędkarska</h4>
         <form action="zapisz.php" method="POST">
             <input type="text" name="imie" id="imie">
             <input type="text" name="nazwisko" id="nazwisko">
@@ -19,8 +20,22 @@
             <input type="submit" value="ZAPISZ">
         </form>
     </div>
-    <div class="lewy"></div>
-    <div class="srodkowy"></div>
-    <div class="prawy"></div>
+    <div class="lewy">
+        <h4>Typy łowisk</h4>
+        <ul>
+            <li>Zalewy</li>
+            <li>Stawy</li>
+            <li>Jeziora</li>
+            <li>Rzeki</li>
+        </ul>
+    </div>
+    <div class="srodkowy">
+        <img src="./pliki1/wedka.jpg" alt="karta wędkarska">
+    </div>
+    <div class="prawy">
+        <p>Stronę przygotował: PESEL</p>
+        <a href="http://www.kartawedkarska.pl">Karta wędkarska</a>
+    </div>
+    <div class="brak"></div>
 </body>
 </html>
